// This is the public API offered by your entity.
syntax = "proto3";

import "google/protobuf/empty.proto";
import "akkaserverless/annotations.proto";
import "google/api/annotations.proto";

package com.lightbend.iot.transport.api;

message AddTripLeg {
    string trip_id = 1 [(akkaserverless.field).entity_key = true];
    int32 longitude = 2 ;
    int32 latitude = 3 ;
    string place_id = 4 ;
    string destination_city_id = 5;
    string origin_city_id = 6;
    string transport_name = 7;
    string transport_type = 8;
}
message CompleteTripLeg {
    string trip_id = 1 [(akkaserverless.field).entity_key = true];
}

message GetTripLeg {
    string trip_id = 1 [(akkaserverless.field).entity_key = true];
}

message Trip {
    string trip_id = 1 ;
    int32 longitude = 2 ;
    int32 latitude = 3 ;
    string place_id = 4 ;
    string destination_city_id = 5;
    string origin_city_id = 6;
    string transport_name = 7;
    string transport_type = 8;
    bool isActive = 9;
}
service TripService {
    option (akkaserverless.service) = {
        type : SERVICE_TYPE_ENTITY
        component : "com.lightbend.iot.transport.domain.Trip"
    };
    rpc AddTrip(AddTripLeg) returns (google.protobuf.Empty){
        option (google.api.http) = {
            post: "/trip/{trip_id}/add"
            body: "*"
        };
    };
    rpc CompleteTrip(CompleteTripLeg) returns (google.protobuf.Empty){
        option (google.api.http).post = "/trip/{trip_id}/complete";
    };
    rpc GetTrip(GetTripLeg) returns (Trip){
        option (google.api.http) = {
            get: "/trip/{trip_id}"
        };
    };
}
